--- a/index.html
+++ b/index.html
@@ -223,14 +223,10 @@
         <i class="fas fa-arrow-up"></i>
     </div>
 
-    <div class="header-container">
-        <div class="logo-container">
-            <img src="https://i.ibb.co/v600pQLy/Gemini-Generated-Image-9tj8yw9tj8yw9tj8.jpg" 
-                 alt="Logo SHALOM" 
-                 class="logo">
-        </div>
-        <h1>SHALOM</h1>
-        <p class="slogan">Transformando tu salud a través del cuidado terapéutico integral</p>
+    <div class="header-container"img src="<a href="https://ibb.co/7dbFTMkV"><img src="https://i.ibb.co/7dbFTMkV/logo-circular.png" alt="logo-circular" border="0" /></a>
+    <p>Fisioterapeuta 
+        𝒀𝒆𝒊𝒎𝒎𝒚 𝑺𝒊𝒍𝒗𝒂</i>
+    <p class="slogan">Transformando tu salud a través del cuidado terapéutico integral</p>
     </div>
 
     <div class="content-container">
@@ -749,4 +745,3 @@ Revitaliza cuerpo y mente en sesiones cortas.
     </script>
 </body>
 </html>
-
